<resources>
    <string name="app_name">ABBlication</string>
    <string name="action_abblist">ABB Liste</string>
    <string name="action_quiz">Azubi Quiz</string>
    <string name="placeholder_business_unit">GB</string>
    <string name="placeholder_organization_unit">OE</string>
    <string name="placeholder_tags">Tags</string>
    <string name="action_logout">Logout</string>
    <string name="action_ecampus">E-Campus</string>
    <string name="hint_username">Benutzername</string>
    <string name="hint_password">Passwort</string>
    <string name="label_login">Login</string>
    <string name="action_myprofile">Mein Profil</string>
    <string name="label_apply_now">Jetzt Bewerben</string>
</resources>
