<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="abblication.ergo.de.abblication.MainActivity">
    <item
        android:id="@+id/action_abblist"
        android:orderInCategory="100"
        android:title="@string/action_abblist"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_quiz"
        android:orderInCategory="100"
        android:title="@string/action_quiz"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_ecampus"
        android:orderInCategory="100"
        android:title="@string/action_ecampus"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
