<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/generalbg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <SearchView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_bar">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_bu"
                android:layout_width="wrap_content"
                android:layout_column="0"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/ErgoGrau"
                android:onClick="onClickBU"
                android:text="@string/placeholder_business_unit" />

            <Button
                android:id="@+id/button_ou"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/ErgoGrau"
                android:onClick="onClickOU"
                android:text="@string/placeholder_organization_unit" />

            <Button
                android:id="@+id/button_tags"
                android:layout_width="wrap_content"
                android:layout_column="2"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/ErgoGrau"
                android:onClick="onClickTags"
                android:text="@string/placeholder_tags" />

        </TableRow>

        <ScrollView>

            <TableLayout
                android:id="@+id/abblist"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

    </TableLayout>

</android.support.constraint.ConstraintLayout>